--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <main>
         <div class="info-group">
           <div class="headline">
-            <h2>Trouvez votre hébergement pour des vacances</h2>
-            <p>En plein centre-ville ou en pleine nature</p>
+            <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+            <span>En plein centre-ville ou en pleine nature</span>
           </div>
           <form>
             <div class="search-bar">
@@ -79,31 +79,35 @@
             </div>
           </form>
           <div class="filter-bar">
-            <h3>Filtres</h3>
+            <h3 class="filter-title">Filtres</h3>
             <div class="filter-container">
               <div class="filter-button">
                 <button class="filter">
                   <img src="/images/logo/price.png" alt="" />
                   <h3>Économique</h3>
+                  <h4>Économique</h4>
                 </button>
                 <button class="filter">
                   <img src="/images/logo/family.png" alt="" />
                   <h3>Familial</h3>
+                  <h4>Familial</h4>
                 </button>
                 <button class="filter">
                   <img src="/images/logo/romantique.png" alt="" />
                   <h3>Romantique</h3>
+                  <h4>Romantique</h4>
                 </button>
                 <button class="filter">
                   <img src="/images/logo/fire.png" alt="" />
                   <h3>Nos pépites</h3>
+                  <h4>Nos pépites</h4>
                 </button>
               </div>
             </div>
           </div>
           <div class="infobar">
             <img class="logo-i" src="/images/logo/Icon.png" alt="logo-i" />
-            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            <span>Plus de 500 logements sont disponibles dans cette ville</span>
           </div>
         </div>
         <div class="hebergements-and-populaires">
@@ -117,23 +121,11 @@
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
                   <div class="card-content">
-                    <div class="card-txt">
                       <h3 class="card-title">Hôtel du port</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 52<span class="euro">€</span>
                       </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                    <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article>
               </a>
@@ -144,23 +136,11 @@
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
                   <div class="card-content">
-                    <div class="card-txt">
                       <h3 class="card-title">Hôtel Chez Amina</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 96<span class="euro">€</span>
                       </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                      <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article></a
               >
@@ -171,23 +151,11 @@
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
                   <div class="card-content">
-                    <div class="card-txt">
                       <h3 class="card-title">Hôtel Les mouettes</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 76<span class="euro">€</span>
                       </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                      <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article></a
               >
@@ -198,23 +166,11 @@
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
                   <div class="card-content">
-                    <div class="card-txt">
                       <h3 class="card-title">Hôtel de la mer</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 46<span class="euro">€</span>
                       </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                      <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article></a
               >
@@ -225,23 +181,11 @@
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
                   <div class="card-content">
-                    <div class="card-txt">
                       <h3 class="card-title">Auberge La Canebière</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 25<span class="euro">€</span>
                       </p>
-                    </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                      <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article></a
               >
@@ -258,22 +202,12 @@
                         Nuit à partir de 23<span class="euro">€</span>
                       </p>
                     </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                    <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article>
               </a>
             </div>
-            <button class="button-afficherPlus">Afficher plus</button>
+            <button class="button-afficherPlus"><h3>Afficher plus</h3></button>
           </section>
           <section class="populaires">
             <div class="populaires-title">
@@ -294,17 +228,7 @@
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
                     </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                    <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article>
               </a>
@@ -323,17 +247,7 @@
                         Nuit à partir de 71<span class="euro">€</span>
                       </p>
                     </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                    <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article>
               </a>
@@ -350,17 +264,7 @@
                         Nuit à partir de 68<span class="euro">€</span>
                       </p>
                     </div>
-                    <div class="card-rating">
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                      <i
-                        class="fa-xs fa-solid fa-star neutral-star"
-                        aria-hidden="true"
-                      ></i>
-                      <span class="sr-only">Note de 4 sur 5</span>
-                    </div>
+                    <img class="stars" src="/images/logo/stars.png" alt="">
                   </div>
                 </article>
               </a>
