--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
       </header>
       <main>
+        <div class="global-main-container">
         <div class="info-group">
           <div class="headline">
             <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
@@ -74,7 +75,7 @@
               name="submit"
               class="submit-mobile"
               value="Rechercher">
-                <img src="/images/logo/loupebutton.png" alt="loupe-logo-button">
+                <img src="/images/logo/loupesolo.png" alt="loupe-logo-button">
               </button>
             </div>
           </form>
@@ -207,7 +208,7 @@
                 </article>
               </a>
             </div>
-            <button class="button-afficherPlus"><h3>Afficher plus</h3></button>
+            <button class="button-afficherPlus">Afficher plus</button>
           </section>
           <section class="populaires">
             <div class="populaires-title">
@@ -330,7 +331,7 @@
                   </a>
             </div>
         </div>
-        
+        </div>
       </main>
       <footer>
         <section class="footer-container">
