--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <form>
             <div class="search-bar">
               <div class="repere-container">
-                <img src="/images/logo/repere.png" alt="repere" />
+                <i class="fa-solid fa-location-dot"></i>
               </div>
               <input
                 aria-colcount=""
@@ -75,7 +75,7 @@
               name="submit"
               class="submit-mobile"
               value="Rechercher">
-                <img src="/images/logo/loupesolo.png" alt="loupe-logo-button">
+              <i class="fa-solid fa-magnifying-glass fa-lg"></i>
               </button>
             </div>
           </form>
@@ -84,22 +84,22 @@
             <div class="filter-container">
               <div class="filter-button">
                 <button class="filter">
-                  <img src="/images/logo/price.png" alt="" />
+                    <i class="fa-solid fa-money-bill-wave fa-xl"></i>
                   <h3>Économique</h3>
                   <h4>Économique</h4>
                 </button>
                 <button class="filter">
-                  <img src="/images/logo/family.png" alt="" />
+                    <i class="fa-solid fa-person fa-xl"></i>
                   <h3>Familial</h3>
                   <h4>Familial</h4>
                 </button>
                 <button class="filter">
-                  <img src="/images/logo/romantique.png" alt="" />
+                    <i class="fa-solid fa-heart fa-xl";></i>
                   <h3>Romantique</h3>
                   <h4>Romantique</h4>
                 </button>
                 <button class="filter">
-                  <img src="/images/logo/fire.png" alt="" />
+                    <i class="fa-solid fa-fire fa-xl"></i>
                   <h3>Nos pépites</h3>
                   <h4>Nos pépites</h4>
                 </button>
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="infobar">
-            <img class="logo-i" src="/images/logo/Icon.png" alt="logo-i" />
+            <i class="fa-solid fa-info fa-2xs"></i>
             <span>Plus de 500 logements sont disponibles dans cette ville</span>
           </div>
         </div>
@@ -115,8 +115,7 @@
           <section class="hebergements">
             <h2 class="section-title">Hébergements à Marseille</h2>
             <div class="hebergements-cards">
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/fred-kleber.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -126,12 +125,17 @@
                       <p class="card-subtitle">
                         Nuit à partir de 52<span class="euro">€</span>
                       </p>
-                    <img class="stars" src="/images/logo/stars.png" alt="">
+                      <div class="stars">
+                         <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                         <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                         <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                         <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                         <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                         <span class="sr-only">Note de 4 sur 5</span>
+                      </div>
                   </div>
-                </article>
               </a>
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -141,12 +145,17 @@
                       <p class="card-subtitle">
                         Nuit à partir de 96<span class="euro">€</span>
                       </p>
-                      <img class="stars" src="/images/logo/stars.png" alt="">
-                  </div>
-                </article></a
+                      <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                     </div>
+                  </div></a
               >
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/reisetopia.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -156,12 +165,17 @@
                       <p class="card-subtitle">
                         Nuit à partir de 76<span class="euro">€</span>
                       </p>
-                      <img class="stars" src="/images/logo/stars.png" alt="">
-                  </div>
-                </article></a
+                      <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                     </div>
+                  </div></a
               >
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -171,12 +185,17 @@
                       <p class="card-subtitle">
                         Nuit à partir de 46<span class="euro">€</span>
                       </p>
-                      <img class="stars" src="/images/logo/stars.png" alt="">
+                      <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                     </div>
                   </div>
-                </article></a
-              >
-              <a href="#">
-                <article class="card">
+              </a>
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -186,26 +205,35 @@
                       <p class="card-subtitle">
                         Nuit à partir de 25<span class="euro">€</span>
                       </p>
-                      <img class="stars" src="/images/logo/stars.png" alt="">
+                      <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                     </div>
                   </div>
-                </article></a
-              >
-              <a href="#">
-                <article class="card">
+                </a>
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
                   <div class="card-content">
-                    <div class="card-txt">
-                      <h3 class="card-title">Auberge Le Panier</h3>
-                      <p class="card-subtitle">
-                        Nuit à partir de 23<span class="euro">€</span>
-                      </p>
-                    </div>
-                    <img class="stars" src="/images/logo/stars.png" alt="">
+                    <h3 class="card-title">Auberge Le Panier</h3>
+                    <p class="card-subtitle">
+                    Nuit à partir de 23<span class="euro">€</span>
+                    </p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-solid fa-star fa-sm"  aria-hidden="true"></i>
+                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                     </div>
                   </div>
-                </article>
               </a>
             </div>
             <button class="button-afficherPlus">Afficher plus</button>
@@ -216,8 +244,7 @@
               <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
             </div>
             <div class="populaires-cards">
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/emile-guillemot.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -229,12 +256,17 @@
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
                     </div>
-                    <img class="stars" src="/images/logo/stars.png" alt="">
+                    <div class="card-rating">
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
                   </div>
-                </article>
               </a>
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/aw-creative.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -248,12 +280,17 @@
                         Nuit à partir de 71<span class="euro">€</span>
                       </p>
                     </div>
-                    <img class="stars" src="/images/logo/stars.png" alt="">
+                    <div class="card-rating">
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
                   </div>
-                </article>
               </a>
-              <a href="#">
-                <article class="card">
+              <a class="card" href="#">
                   <img
                     src="./images/hebergements/febrian-zakaria2.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -265,20 +302,24 @@
                         Nuit à partir de 68<span class="euro">€</span>
                       </p>
                     </div>
-                    <img class="stars" src="/images/logo/stars.png" alt="">
+                    <div class="card-rating">
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
                   </div>
-                </article>
               </a>
             </div>
           </section>
           <div class="activites">
-            <!-- rename all title class -->
             <div class="activites-title">
               <h2 class="section-title">Activités à Marseille</h2>
             </div>
             <div class="activites-cards">
-                <a href="#">
-                  <article class="act-card">
+                  <a href="#" class="act-card">
                     <img
                       src="./images/activites/reno-laithienne.jpg"
                       alt="Image du vieux port"
@@ -288,10 +329,8 @@
                         <h3 class="card-title">Vieux-Port</h3>
                       </div>
                     </div>
-                  </article>
-                </a>
-                <a href="#">
-                    <article class="act-card">
+                  </a>
+                    <a href="#" class="act-card">
                       <img
                         src="./images/activites/paul-hermann.jpg"
                         alt="Image du vieux port"
@@ -301,10 +340,8 @@
                           <h3 class="card-title">Fort de Pomègues</h3>
                         </div>
                       </div>
-                    </article>
-                  </a>
-                  <a href="#">
-                    <article class="act-card">
+                    </a>
+                    <a href="#" class="act-card">
                       <img
                         src="./images/activites/kilyan-sockalingum.jpg"
                         alt="Image du vieux port"
@@ -314,10 +351,8 @@
                           <h3 class="card-title">Parc national des Calanques</h3>
                         </div>
                       </div>
-                    </article>
-                  </a>
-                  <a href="#">
-                    <article class="act-card">
+                    </a>
+                    <a href="#" class="act-card">
                       <img
                         src="./images/activites/florian-wehde.jpg"
                         alt="Image du vieux port"
@@ -327,8 +362,7 @@
                           <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
                         </div>
                       </div>
-                    </article>
-                  </a>
+                    </a>
             </div>
         </div>
         </div>
