added article to hebergements-cards block

--- a/index.html
+++ b/index.html
@@ -85,23 +85,19 @@
               <div class="filter-button">
                 <button class="filter">
                     <i class="fa-solid fa-money-bill-wave fa-xl"></i>
-                  <h3>Économique</h3>
-                  <h4>Économique</h4>
+                  <span>Économique</span>
                 </button>
                 <button class="filter">
                     <i class="fa-solid fa-person fa-xl"></i>
-                  <h3>Familial</h3>
-                  <h4>Familial</h4>
+                  <span>Familial</span>
                 </button>
                 <button class="filter">
                     <i class="fa-solid fa-heart fa-xl";></i>
-                  <h3>Romantique</h3>
-                  <h4>Romantique</h4>
+                  <span>Romantique</span>
                 </button>
                 <button class="filter">
                     <i class="fa-solid fa-fire fa-xl"></i>
-                  <h3>Nos pépites</h3>
-                  <h4>Nos pépites</h4>
+                  <span>Nos pépites</span>
                 </button>
               </div>
             </div>
@@ -116,6 +112,7 @@
             <h2 class="section-title">Hébergements à Marseille</h2>
             <div class="hebergements-cards">
               <a class="card" href="#">
+                <article>
                   <img
                     src="./images/hebergements/fred-kleber.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -134,12 +131,13 @@
                          <span class="sr-only">Note de 4 sur 5</span>
                       </div>
                   </div>
+                </article>
               </a>
               <a class="card" href="#">
+                <article>
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                    alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                       <h3 class="card-title">Hôtel Chez Amina</h3>
                       <p class="card-subtitle">
@@ -153,9 +151,11 @@
                         <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                         <span class="sr-only">Note de 4 sur 5</span>
                      </div>
-                  </div></a
-              >
+                  </div>
+                  </article>  
+              </a>
               <a class="card" href="#">
+                <article>
                   <img
                     src="./images/hebergements/reisetopia.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -173,13 +173,14 @@
                         <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                         <span class="sr-only">Note de 4 sur 5</span>
                      </div>
-                  </div></a
-              >
+                  </div>
+                </article>
+              </a>
               <a class="card" href="#">
+                <article>
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                    alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                       <h3 class="card-title">Hôtel de la mer</h3>
                       <p class="card-subtitle">
@@ -194,12 +195,13 @@
                         <span class="sr-only">Note de 4 sur 5</span>
                      </div>
                   </div>
+                </article>
               </a>
               <a class="card" href="#">
+                <article>
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                    alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                       <h3 class="card-title">Auberge La Canebière</h3>
                       <p class="card-subtitle">
@@ -214,12 +216,13 @@
                         <span class="sr-only">Note de 4 sur 5</span>
                      </div>
                   </div>
+                </article>
                 </a>
               <a class="card" href="#">
-                  <img
+                <article>
+                   <img
                     src="./images/hebergements/nicate-lee.jpg"
-                    alt="Image de la chambre d'hôtel montrant un lit"
-                  />
+                    alt="Image de la chambre d'hôtel montrant un lit">
                   <div class="card-content">
                     <h3 class="card-title">Auberge Le Panier</h3>
                     <p class="card-subtitle">
@@ -234,6 +237,7 @@
                         <span class="sr-only">Note de 4 sur 5</span>
                      </div>
                   </div>
+                </article>
               </a>
             </div>
             <button class="button-afficherPlus">Afficher plus</button>
